--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -144,7 +144,7 @@
                                             href="/help/#changelog" class="link">Neuste Funktionen</a></span></li>
                                     <li class="list-group-item list-group-item-action"><span><i class="fa fa-comments-o"
                                                                                                 aria-hidden="true"></i><a
-                                            href="/help/faq" class="link">FAQ</a></span></li>
+                                            href="https://blog.schul-cloud.org/faq/" target="_blank" class="link">FAQ</a></span></li>
                                     <div class="delimiter"></div>
                                     {{#ifneq this.currentRole "Schüler"}}
                                     <li class="list-group-item list-group-item-action"><span><i class="fa fa-pencil"
