--- a/views/news/article.hbs
+++ b/views/news/article.hbs
@@ -5,7 +5,7 @@
                 <small class="text-muted">
                     von {{news.creatorId.firstName}} {{news.creatorId.lastName}} erstellt
                     {{#if news.updaterId}}
-                        {{#ifneq {news.creatorId._id news.updaterId._id}}
+                        {{#ifneq news.creatorId._id news.updaterId._id}}
                             </br>zuletzt bearbeitet von {{news.updaterId.firstName}} {{news.updaterId.lastName}}
                         {{/ifneq}}
                     {{/if}}
