--- a/views/news/article.hbs
+++ b/views/news/article.hbs
@@ -4,11 +4,6 @@
                 <small class="text-muted">{{timeFromNow news.displayAt}}</small>
                 <small class="text-muted">
                     von {{news.creatorId.firstName}} {{news.creatorId.lastName}} erstellt
-                    {{#if news.updaterId}}
-                        {{#ifneq news.creatorId._id news.updaterId._id}}
-                            </br>zuletzt bearbeitet von {{news.updaterId.firstName}} {{news.updaterId.lastName}}
-                        {{/ifneq}}
-                    {{/if}}
                 </small>
             </p>
             <div class="ckcontent">
@@ -16,10 +11,10 @@
             </div>
             {{#userHasPermission "NEWS_EDIT"}}
                 <div class="mt-1">
-                    <a class="btn btn-primary btn-edit" href="/news/{{news._id}}/edit" alt="Artikel '{{news.title}}' bearbeiten.">
+                    <a class="btn btn-primary btn-edit" href="/news/{{../news._id}}/edit" alt="Artikel '{{../news.title}}' bearbeiten.">
                         Bearbeiten
                     </a>
-                    <a class="btn btn-secondary btn-delete" href="/news/{{news._id}}" target="_blank" data-method="delete-material" data-name="{{news.title}}" alt="Artikel '{{news.title}}' löschen">
+                    <a class="btn btn-secondary btn-delete" href="/news/{{../news._id}}" target="_blank" data-method="delete-material" data-name="{{../news.title}}" alt="Artikel '{{../news.title}}' löschen">
                         Löschen
                     </a>
                 </div>
