--- a/views/homework/feedback.hbs
+++ b/views/homework/feedback.hbs
@@ -1,7 +1,7 @@
 <section id="feedback" class="tab-content section-homeworkdetails">
     <div class="homework">
         {{#if submission.grade}}
-            <b class="grade">{{submission.grade}}</b>
+            Du hast <b class="grade">{{submission.grade}}%</b> richtig gelöst.
         {{/if}}
         
         <div class="comment">
