--- a/views/news/overview.hbs
+++ b/views/news/overview.hbs
@@ -1,7 +1,7 @@
 {{#extend "news/news"}}
     {{#content "page"}}
         <div class="route-news">
-                {{#userHasPermission "NEWS_EDIT"}}
+                {{#userHasPermission "SCHOOL_NEWS_EDIT"}}
                     <a href="/news/new" class="btn btn-primary btn-add create pull-right mb-1">
                         <i class="fa fa-plus" aria-hidden="true"></i> News hinzufügen
                     </a>
