--- a/views/homework/submissions.hbs
+++ b/views/homework/submissions.hbs
@@ -4,8 +4,8 @@
         <tr>
             <th>Vorname</th>
             <th>Nachname</th>
-            <th>Abgegeben <span>{{submissionsCount}}/{{userCount}}</span></th>
-            <th>Bewertung {{#if averageRating}}<span>{{averageRating}}%</span>{{/if}}</th>
+            <th>Abgegeben <span>{{stats.submissionCount}}/{{stats.userCount}}</span></th>
+            <th>Bewertung {{#if stats.averageGrade}}<span>{{stats.averageGrade}}%</span>{{/if}}</th>
             <th/>
         </tr>
         </thead>
