Modal bug fixed

--- a/views/dashboard/components/card_template.hbs
+++ b/views/dashboard/components/card_template.hbs
@@ -19,8 +19,8 @@
                                        href="{{this.link}}"
                                        target="_blank"
                                        data-method="delete-material"
-                                       data-name="{{../../title}}"
-                                       alt="Artikel '{{../../title}}' löschen">
+                                       data-name="{{../title}}"
+                                       alt="Artikel '{{../title}}' löschen">
                                         <i class="fa fa-{{this.icon}}"></i>
                                     </a>
                             {{else}}
