Archivieren funktioniert, Anzeige archivierter Dateien fehlt - warten auf Pull #417

--- a/static/styles/homework/overview.scss
+++ b/static/styles/homework/overview.scss
@@ -95,10 +95,8 @@
       }
     }
   }
-}
-
-.modal-body {
-  textarea {
-    min-height: 100px;
+  .disableable.disabled{
+    -webkit-filter: grayscale(100%) opacity(0.7);
+    filter: grayscale(100%) opacity(0.7);
   }
 }
