--- a/views/homework/components/overview_card_template.hbs
+++ b/views/homework/components/overview_card_template.hbs
@@ -49,24 +49,25 @@
         </div>
     </a>
     {{#userHasPermission "HOMEWORK_CREATE"}}
-    {{#ifvalue ../this.teacherId value=../this.currentUser._id}}
-        {{#each ../this.actions}}
-            {{#if this.method}}
-                    <a class="btn btn-secondary btn-sm {{this.class}}"
-                       href="{{this.link}}"
-                       target="_blank"
-                       data-method="{{this.method}}"
-                       data-name="{{../../name}}"
-                       alt="{{this.alt}} der Aufgabe: '{{../../name}}'.">
-                        <i class="fa fa-{{this.icon}}"></i>
+        {{! Maybe Teachers create Tasks for other Teachers -> prevent editing by them }}
+        {{#ifvalue ../this.teacherId value=../this.currentUser._id}}
+            {{#each ../this.actions}}
+                {{#if this.method}}
+                        <a class="btn btn-secondary btn-sm {{this.class}}"
+                           href="{{this.link}}"
+                           target="_blank"
+                           data-method="{{this.method}}"
+                           data-name="{{../../name}}"
+                           alt="{{this.alt}} der Aufgabe: '{{../../name}}'.">
+                            <i class="fa fa-{{this.icon}}"></i>
+                        </a>
+                {{else}}
+                    <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}" alt="Aufgabe '{{../name}}' {{this.alt}}.">
+                        <i class="fa fa-{{this.icon}}"></i> {{this.label}}
                     </a>
-            {{else}}
-                <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}" alt="Aufgabe '{{../name}}' {{this.alt}}.">
-                    <i class="fa fa-{{this.icon}}"></i> {{this.label}}
-                </a>
-            {{/if}}
-        {{/each}}
-    {{/ifvalue}}
+                {{/if}}
+            {{/each}}
+        {{/ifvalue}}
     {{/userHasPermission}}
     {{#inArray this.currentUser._id this.archived}}
         <a class="btn btn-secondary btn-sm btn-archive"
