--- a/static/styles/lib/loggedin.scss
+++ b/static/styles/lib/loggedin.scss
@@ -99,7 +99,7 @@ aside.nav-sidebar {
                         border-bottom: 1px solid transparent;
 
                         .fa {
-                            display: none;
+                            margin-left: 10px;
                         }
 
                         @include media-breakpoint-down(md) {
@@ -108,6 +108,7 @@ aside.nav-sidebar {
 
                             .fa {
                                 display: inline-block;
+                                margin-left: 0;
                             }
                         }
 
@@ -116,7 +117,7 @@ aside.nav-sidebar {
                             line-height: 40px;
 
                             .fa {
-                                display: none;
+                                margin-left: 10px;
                             }
                         }
                     }
@@ -137,9 +138,9 @@ aside.nav-sidebar {
                         font-size: 20px;
                         width: 20px;
                         margin-right: 20px;
-                        display: block;
-                        float: left;
-                        line-height: 60px;
+                        display: inline-block;
+                        text-align: center;
+                        vertical-align: middle;
                     }
 
                     span {
