Browser-Empfehlungstext hinzugefügt

--- a/views/authentication/forms/demo-login.hbs
+++ b/views/authentication/forms/demo-login.hbs
@@ -23,6 +23,7 @@
                     <input type="submit" class="btn btn-block btn-primary btn-login" value="als Lehrer einloggen" />
                 </div>
             </form>
+            Wir empfehlen die Nutzung einer aktuellen Version der Browser Chrome, Firefox, Edge oder Safari.
         </div>
     </div>
 </section>
