--- a/views/homework/assignment.hbs
+++ b/views/homework/assignment.hbs
@@ -52,6 +52,7 @@
     <script src="/scripts/lessons.js" type="text/javascript" defer></script>
 {{/content}}
 {{#content "styles" mode="append"}}
+    <link rel="stylesheet" href="/styles/homework/homework.css"/>
     <link rel="stylesheet" href="/styles/homework/assignment.css"/>
     <link rel="stylesheet" href="/styles/homework/submissions.css"/>
     <link rel="stylesheet" href="/styles/homework/discussions.css"/>
