--- a/views/homework/submission.hbs
+++ b/views/homework/submission.hbs
@@ -16,7 +16,7 @@
         <form class="form" method="post" action="/homework/submit">
             <div class="form-group section-uploaded-files">
                 <label>Zur Abgabe hochgeladene Dateien (ungespeichert!)</label>
-                <ul class="list-group list-group-files col-md-6 col-xs-12">
+                <ul class="list-group-files d-flex flex-row">
                  </ul>
             </div>
             <input type="hidden" name="_method" data-force-value="true" value="post"/>
