--- a/views/files/files-overview.hbs
+++ b/views/files/files-overview.hbs
@@ -51,6 +51,26 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row card-deck-row">
+                <div class="col-md-6 col-sm-6 col-xs-12">
+                    <div class="card h-100">
+                        <div class="card-block">
+                            <div class="card-text">
+                                <small class="text-muted">
+                                    <i class="fa fa-hashtag text-red"></i> {{this.counter.sharedFiles}} Dateien
+                                </small>
+                            </div>
+                            <h4 class="card-title"><i class="fa fa-user"></i> Mit mir geteilte Dateien</h4>
+                            <div class="card-text">
+                                Hier findest du alle mit dir geteilten Dateien. Dies sind Dateien die von anderen Nutzern zur Verfügung gestellt worden sind.
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn btn-primary btn-block" href="/files/shared/">Dateien öffnen</a>
+                        </div>
+                    </div>
+                </div>
         </div>
         </div>
     {{/content}}
