--- a/views/homework/components/overview_card_template.hbs
+++ b/views/homework/components/overview_card_template.hbs
@@ -1,4 +1,4 @@
-<li class="card assignment {{this.privateclass}}" style="border-left:10px solid {{this.color}}">
+<li class="card assignment {{this.privateclass}} disableable" style="border-left:10px solid {{this.color}}">
     <a class="content" href="{{this.url}}" alt="Details der Aufgabe: '{{this.name}}'"> 
         <div class="dates">
             {{timeToString availableDate}}<br/>
@@ -49,25 +49,45 @@
         </div>
     </a>
     {{#userHasPermission "HOMEWORK_CREATE"}}
-    {{#ifvalue ../this.teacherId value=../this.currentUser._id}}
-        {{#each ../this.actions}}
-            {{#if this.method}}
-                    <a class="{{this.class}}"
+        {{! Maybe Teachers create Tasks for other Teachers -> prevent editing by them }}
+        {{#ifvalue ../this.teacherId value=../this.currentUser._id}}
+            {{#each ../this.actions}}
+                {{#if this.method}}
+                    <a class="btn btn-secondary btn-sm {{this.class}}"
                        href="{{this.link}}"
                        target="_blank"
-                       data-method="delete-material"
+                       data-method="{{this.method}}"
                        data-name="{{../../name}}"
-                       alt="Löschen der Aufgabe: '{{../../name}}'.">
+                       alt="{{this.alt}} der Aufgabe: '{{../../name}}'.">
                         <i class="fa fa-{{this.icon}}"></i>
                     </a>
-            {{else}}
-                <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}" alt="Aufgabe '{{../../name}}' {{this.alt}}.">
-                    <i class="fa fa-{{this.icon}}"></i> {{this.label}}
-                </a>
-            {{/if}}
-        {{/each}}
-    {{/ifvalue}}
+                {{else}}
+                    <a class="btn btn-secondary btn-sm {{this.class}}" href="{{this.link}}" alt="Aufgabe '{{../../name}}' {{this.alt}}.">
+                        <i class="fa fa-{{this.icon}}"></i> {{this.label}}
+                    </a>
+                {{/if}}
+            {{/each}}
+        {{/ifvalue}}
     {{/userHasPermission}}
+    {{#inArray this.currentUser._id this.archived}}
+        <a class="btn btn-secondary btn-sm btn-archive"
+            href="{{../url}}"
+            target="_blank"
+            data="archive=open"
+            data-toggle="tooltip" title="Verschiebe Aufgabe zwischen Übersichtsseite und Archiv"
+            alt-text="<i class='fa fa-archive'></i>">
+                <i class='fa fa-mail-reply'></i>
+        </a>
+    {{else}}
+        <a class="btn btn-secondary btn-sm btn-archive"
+            href="{{../url}}"
+            target="_blank"
+            data="archive=done"
+            data-toggle="tooltip" title="Verschiebe Aufgabe zwischen Übersichtsseite und Archiv"
+            alt-text="<i class='fa fa-mail-reply'></i>">
+                <i class='fa fa-archive'></i>
+        </a>
+    {{/inArray}}
     <a href="{{this.url}}" alt="Details der Aufgabe: '{{this.name}}'">
         <span class="more">Details ><i className="fa fa-chevron-right" aria-hidden="true"></i></span>
     </a>
