removed doubled infos (are already inside graphic)

--- a/views/homework/components/overview_card_template.hbs
+++ b/views/homework/components/overview_card_template.hbs
@@ -14,10 +14,10 @@
                     width="80" height="80">
                 </circular-progress>
                 <div class="textinfo">
-                    <span>Abgegeben: {{this.stats.submissionCount}} ({{this.stats.submissionPercentage}}%)</span>
+                    <span>Abgegeben: {{this.stats.submissionCount}}</span>
                     <span>
                     {{#if this.stats.gradeCount}}
-                        Bewertet: {{this.stats.gradeCount}} ({{this.stats.gradePercentage}}%)
+                        Bewertet: {{this.stats.gradeCount}}
                     {{else}}
                         Bewertet: -
                     {{/if}}
