--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -18,10 +18,15 @@
         <link rel="preload" href="/fonts/ptsans/ptsans-italic.woff" as="font" type="font/woff" crossorigin>
         <link rel="preload" href="/fonts/fontawesome/fontawesome-webfont.woff" as="font" type="font/woff" crossorigin>
         <link rel="preload" href="/images/hpi-logo.png" as="image" crossorigin>
-        <link rel="mask-icon" href="/images/safari-pinned-tab.svg" color="#5bbad5">
-        <link rel="apple-touch-icon" href= "/images/webapp.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
+        <link rel="mask-icon" href="/images/logo/safari-pinned-tab.svg" color="#b10438">
+        <link rel="apple-touch-icon" href= "/images/logo/app-icon-512.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/images/logo/app-icon-120.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/images/logo/app-icon-152.png">
+        <link rel="apple-touch-icon" sizes="167x167" href="/images/logo/app-icon-167.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/images/logo/app-icon-180.png">
+        <link rel="icon" type="image/png" sizes="48x48" href="/images/logo/favicon-48.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/images/logo/favicon-32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/images/logo/favicon-16.png">
         <link rel="manifest" href="/images/manifest.json">
         <link rel="stylesheet" href="/fonts/ptsans/ptsans.css" />
         <link rel="stylesheet" href="/fonts/fontawesome/fontawesome.css" />
