--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -35,7 +35,7 @@
                 <ul class="sidebar-list">
                     <li>
                         <div class="sc-branding">
-                            <i class="fa fa-cloud" aria-hidden="true"></i>
+                            <div class="cloud-logo"></div>
                             <span>Schul-Cloud</span>
                         </div>
                     </li>
