Logo on Landingpage-Header

--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -1,7 +1,8 @@
 <header class="mb-1">
     <div class="container">
         <nav class="navbar-light">
-            <a id="title" class="pull-left" href="/">Schul-Cloud</a>
+            <a id="title" class="pull-left" href="/">
+                <div class="cloud-logo"></div>Schul-Cloud</a>
             <ul class="nav navbar-nav pull-right">
                 <li class="nav-item hidden-sm-down">
                     <a class="nav-link" href="/partner">Partner</a>
