--- a/static/styles/authentication/home.scss
+++ b/static/styles/authentication/home.scss
@@ -37,6 +37,19 @@ body {
             padding-left: 0 !important;
             padding-top: .75rem !important;
             padding-bottom: .75rem !important;
+            .cloud-logo {
+                display: inline-block;
+                width: 2.5rem;
+                height: 2rem;
+                margin-top: -.25rem;
+                margin-bottom: -.5rem;
+                margin-right: .5rem;
+                background: url("../../images/logo/cloud-transparent-mono.svg") no-repeat center;
+                background-size: contain;
+                @include media-breakpoint-down(xs) {
+                    display:none;
+                }
+            }
         }
         .nav-item{
             margin: 0 !important;
